2003-09-05	fabian

    * Fixed lost scrollback buffer size UI.
    
2003-09-05	ujwal

    * Caching text selection and re-applying in VT100Screen: updateScreen.

2003-09-04	fabian

    * Added support for mid-button paste.
    
2003-09-02	fabian

    * Updated Korean and French translations.
    * Fixed laptop's enter key.
    * Fixed the lost new line attributes bug.
    * Cleaned up eraseInDisplay code
    
2003-08-30	fabian

    * Implemented scrollback buffer size UI.
    * Fixed a bug in VT100Screen::eraseInDisplay that causes a dead lock.
    
2003-08-30	ujwal
    
    * Fixed bug in VT100Screen: deleteLines.

2003-08-29	ujwal
    
    * Fixed a problem in calculating number of rows when tabs are on the side.
    * Disabled "trim white space on copy" feature. Terminal applications should 
      not really be doing this. If the feature is requested again, we could make 
      it an option.
    * Made PTYTask: +_processReadTask non-blocking so that other functions can be 
      performed during idle time.

2003-08-28	fabian

    * Changed version number to 0.7.7
    * Updated documentation
    * Fixed a typo in Preference panel of zh_TW localiztion
    
2003-08-13	ujwal

    * Fixed an obscure bug that prevented textview from being first responder when 
      "hide tab" option was disabled. Now not allowing tabview to accept first responder.


2003-08-13	sgehrman & ujwal

    * Moved config panel sheet and code into separate nib file and controller.

2003-08-11	sgehrman

    * fixed a bug when setting tabs to the right or left.
    * made iTermApplicationDelegate to further separate that code from the iTermController
    * added [iTermController sharedInstance] to make it simple to use one instance of this
    * added some missing [super dealloc] calls
    * cleaned up some formatting
    * cleaned up addressbookcontroller


2003-08-09	ujwal

    * Fixed resizing when terminal view is not in an iTerm window.

2003-08-08	ujwal
